Fix z-indexes
-Move all z-index usage to styles.css for easier tracking

-Fix z-index for sidebar and tester components

--- a/src/components/tester-info/tester-info.css
+++ b/src/components/tester-info/tester-info.css
@@ -3,6 +3,7 @@
     --tester-background-color: rgb(232, 211, 50);
     --tester-border-settings: 3px solid orange;
 }
+
 .tester{
     position: fixed;
     padding: 0.75em;
@@ -16,6 +17,7 @@
     border-bottom-left-radius: 1em;
     transition: right ease-in-out .5s;
     user-select: none;
+    z-index: 4;
 }
 
 .tester *{
