--- a/src/styles.css
+++ b/src/styles.css
@@ -94,8 +94,6 @@ body{
     position: fixed;
     width: 100vw;
     top: 0;
-    /* z-index increased due to issue with signup page passwordless toggle */
-    z-index: 2;
 }
 
 .header__container{
@@ -210,7 +208,6 @@ body{
     width: 200px;
     padding: 4em 0 0 2em;;
     gap: 1em;
-    z-index: 3;
 }
 
 .sidebar__link{
@@ -397,4 +394,25 @@ body.light{
 
 .sidebar__symbol.light{
     fill: black;
+}
+
+/* 
+    Z-INDEXES
+*/
+
+/* Signup page tooltip */
+.tooltip{
+    z-index: 1;
+}
+
+.header{
+    z-index: 2;
+}
+
+.sidebar{
+    z-index: 3;
+}
+
+.tester{
+    z-index: 4;
 }
